<resources>
    <string name="app_name">DroneKit Bridge</string>
    <string name="app_version">1.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_mode">Mode</string>
    <string name="nav_server">Relay Server</string>
    <string name="nav_client">Relay Client</string>
    <string name="nav_bt_server">Bluetooth Relay Server</string>
    <string name="nav_bt_client">Bluetooth Relay Client</string>
    <string name="nav_tracker">Track Targets</string>

    <string name="lbl_ip_addr">IP Address:</string>
    <string name="lbl_port">Port:</string>
    <string name="btn_listen">Listen</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_stop_listening">Stop</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_send">Send</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>

    <string name="toast_bt_connected">Connected</string>
    <string name="toast_bt_not_available">Bluetooth is not available on this device.</string>
    <string name="toast_bt_not_enabled">Bluetooth is not enabled.</string>
    <string name="title_connected_to">Connected to %s</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_not_connected">Not connected</string>
    <string name="chk_discoverable">Visible to other devices</string>

    <!-- DeviceListActivity -->
    <string name="title_activity_device_list">Devices</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="btn_scan">Scan</string>
    <string name="none_paired">None paired</string>
    <string name="none_found">No devices found</string>
    <string name="status_scanning">Scanning</string>
    <string name="select_device">Select device</string>

    <!-- ServerFragment -->
    <string name="title_fragment_socket_server">Socket Server</string>
    <string name="summary_fragment_server">Use this to receive messages from a device running this application in <b>Socket Client</b> mode on the same network.
    You can then relay the location messages from it to <b>Tower</b> or another app running on the same device to direct a drone to those locations.
    <b><i>NOTE:</i></b> Only works on a wifi connection.
    </string>
    <string name="toast_server_stopped">Server Stopped</string>
    <string name="toast_client_connected">Client connected</string>
    <string name="toast_client_disconnected">Client disconnected</string>
    <string name="chk_log_incoming">Log incoming data</string>
    <string name="chk_log_output">Log output</string>
    <string name="chk_relay_locations">Relay target locations</string>
    <string name="ip_addr_port">IP Address and port</string>
    <string name="toast_copied">Copied to clipboard</string>
    <string name="toast_not_on_wifi">You are not on a wifi connection. No one will be able to connect to you.</string>
    <string name="no_wifi_connection">(Not on wifi)</string>

    <!-- BluetoothServerFragment -->
    <string name="title_fragment_bt_server">Bluetooth Server</string>
    <string name="summary_fragment_bt_server">Use this to receive messages from a connected Bluetooth client in <b>Bluetooth Client</b> mode receiving
        location data. Select <b>Relay target locations</b> to send the received locations to Tower.
    </string>

    <!-- ClientFragment -->
    <string name="title_fragment_socket_client">Socket Client</string>
    <string name="summary_fragment_client">Use this to send messages to another device running this application in <b>Socket Server</b> mode on the same network.
    Click <b>Send drone locations from Tower</b> to receive locations from Tower and send them to the other device.
    Click <b>Send my locations</b> to receive this device\'s locations and send them to the other device.
    </string>
    <string name="toast_client_connect_failed">Connection to socket failed.</string>
    <string name="lbl_location_options">Locations:</string>
    <string name="rdo_drone_location">Send drone locations from Tower</string>
    <string name="rdo_my_location">Send my locations</string>

    <!-- BluetoothClientFragment -->
    <string name="title_fragment_bt_client">Bluetooth Client</string>
    <string name="summary_fragment_bt_client">Use this to send messages to a connected Bluetooth device running this application
        in <b>Bluetooth Server</b> mode. Click <b>Send drone locations from Tower</b> to receive them from Tower and send them to the other device.
        Click <b>Send my locations</b> to send this device\'s locations to the other device.
    </string>
    <string name="btn_find_devices">Find devices</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connected">Connected</string>
    <string name="toast_bt_connect_failed">Connection failed.</string>
    <string name="toast_bt_connection_lost">Connection lost.</string>

    <!-- RemoteTrackFragment -->
    <string name="title_fragment_remote_target">Follow Me</string>
    <string name="summary_fragment_remote_track">Use this to let the drone track your location as you move around.\n\n
    <b>Note:</b> You need to have a good internet connection.</string>
    <string name="lbl_groupId">Group ID:</string>
    <string name="hint_groupId">Any unique group id</string>
    <string name="lbl_userId">User ID:</string>
    <string name="hint_userId">Any unique user id</string>
    <string name="hint_group_user_ids">Your <b>group ID</b> and <b>user ID</b> can be anything, as long as they\'re unique.
        Multiple user ids within the same group will all show on the map at the same time.</string>

    <!-- TrackerFragment -->
    <string name="title_fragment_tracker">Track Targets</string>
    <string name="summary_fragment_tracker">Use this to track multiple targets in <b>Follow Me</b> mode.</string>
    <string name="lbl_group">Group:</string>
    <string name="chk_pan_map">Pan to follow targets</string>
    <string name="follow_user_fmt">Following %s</string>
    <string name="say_warn_followed_user_died">Warning: Follow Target has stopped reporting locations.</string>
    <string name="btn_stop_following_user">Stop</string>
    <string name="lbl_relay_type">Relay type:</string>
    <string name="rdo_broadcast">Broadcast</string>
    <string name="rdo_socket">Socket</string>
    <string name="rdo_bt">Bluetooth</string>
    <string name="hint_ip_addr">IP Address</string>
    <string name="hint_port">Port</string>
    <string name="port_default">8888</string>
    <string name="tip_tracker_socket_connect">Connect to this app on a different device</string>
    <string name="group_no_groups">(no groups)</string>
    <string name="toast_ws_disconnected">Disconnected</string>
    <string name="toast_no_groups_refresh">No groups. Refresh to see current groups.</string>

    <!-- LocationAwareness -->
    <string name="toast_location_rationale">Locations are needed for sending to the drone.</string>
    <string name="dlg_enable_location_title">Enable Locations</string>
    <string name="dlg_enable_location_msg">Your Location settings are currently disabled. Please enable Locations.</string>
</resources>
