<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_mode">
        <menu>
            <item
                android:id="@+id/nav_server"
                android:icon="@drawable/ic_socket_server"
                android:title="@string/title_fragment_socket_server"
                />

            <item
                android:id="@+id/nav_client"
                android:icon="@drawable/ic_socket_client"
                android:title="@string/title_fragment_socket_client"
                />

            <item
                android:id="@+id/nav_bt_server"
                android:icon="@drawable/ic_bluetooth_server"
                android:title="@string/title_fragment_bt_server"
                />

            <item
                android:id="@+id/nav_bt_client"
                android:icon="@drawable/ic_bluetooth_client"
                android:title="@string/title_fragment_bt_client"
                />

            <item
                android:id="@+id/nav_remote_track"
                android:icon="@drawable/ic_remote_target"
                android:title="@string/title_fragment_remote_target"
                />

            <item
                android:id="@+id/nav_tracker"
                android:icon="@drawable/ic_track_targets"
                android:title="@string/title_fragment_tracker"
                />
        </menu>
    </item>

</menu>
