<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MainFragment"
    tools:context="com.fognl.dronekitbridge.fragments.RemoteTrackFragment"
    >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_fragment_remote_track"
        style="@style/Text.Title"
        />

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:text="@string/summary_fragment_remote_track"
        style="@style/Text.Summary"
        />

    <LinearLayout
        android:id="@+id/layout_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_summary"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_groupId"
                style="@style/Text.Prompt.MinWidth"
                />

            <EditText
                android:id="@+id/edit_groupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_groupId"
                android:imeOptions="actionNext"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_userId"
                style="@style/Text.Prompt.MinWidth"
                />

            <EditText
                android:id="@+id/edit_userId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_userId"
                android:imeOptions="actionDone"
                style="@style/Text.Data"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_group_user_ids"
            style="@style/Text.Tip"
            />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_large"
            android:layout_gravity="right"
            android:text="@string/btn_start"
            />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text.Status"
            />
    </LinearLayout>
</RelativeLayout>
