<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MainFragment"
                tools:context="com.fognl.dronekitbridge.fragments.ServerFragment"
    >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_fragment_bt_server"
        style="@style/Text.Title"
        />

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:text="@string/summary_fragment_bt_server"
        style="@style/Text.Summary"
        />

    <LinearLayout
        android:id="@+id/layout_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_summary"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:id="@+id/chk_relay_locations"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chk_relay_locations"
                />

            <Button
                android:id="@+id/btn_listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_listen"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_fields"
        android:orientation="vertical"
        >
        <CheckBox
            android:id="@+id/chk_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_log_incoming"
            />
        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_tiny"
            >
            <TextView
                android:id="@+id/text_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Text.Log"
                />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
