<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MainFragment"
                tools:context="com.fognl.dronekitbridge.fragments.ClientFragment"
    >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_fragment_client"
        style="@style/Text.Title"
        />

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:text="@string/summary_fragment_client"
        style="@style/Text.Summary"
        />

    <LinearLayout
        android:id="@+id/layout_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_summary"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_ip_addr"
                style="@style/Text.Prompt.MinWidth"
                />

            <EditText
                android:id="@+id/edit_ip_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                style="@style/Text.Data"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_port"
                style="@style/Text.Prompt.MinWidth"
                />

            <EditText
                android:id="@+id/edit_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLength="4"
                style="@style/Text.Data"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_location_options"
                style="@style/Text.Prompt.MinWidth"
                />
            <RadioGroup
                android:id="@+id/group_locations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/rdo_drone_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rdo_drone_location"
                    />

                <RadioButton
                    android:id="@+id/rdo_target_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rdo_target_location"
                    />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_fields"
        android:orientation="horizontal"
        android:gravity="right|center_vertical"
        >
        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_connect"
            />
        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"
            android:enabled="false"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_buttons"
        >
        <TextView
            android:id="@+id/text_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text.Log"
            />
    </ScrollView>

</RelativeLayout>
